k8s/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark
      role: master
  template:
    metadata:
      labels:
        app: spark
        role: master
    spec:
      containers:
        - name: spark-master
          image: bitnami/spark:latest
          ports:
            - containerPort: 7077 # Porta do Spark Master
            - containerPort: 8080 # UI do Spark Master
