k8s/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
spec:
  replicas: 2 # Número de workers
  selector:
    matchLabels:
      app: spark
      role: worker
  template:
    metadata:
      labels:
        app: spark
        role: worker
    spec:
      containers:
      - name: spark-worker
        image: my-spark-image
        imagePullPolicy: Never
        ports:
        - containerPort: 8081 # Interface Web dos Workers
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1"
        volumeMounts:
        - name: pv-tse-volume
          mountPath: /app/spark/data 
      volumes:
      - name: pv-tse-volume
        persistentVolumeClaim:
          claimName: pvc-tse-claim
