k8s/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  ports:
    - protocol: TCP
      name: spark
      port: 7077
      targetPort: 7077
    - protocol: TCP
      name: webui
      port: 8080
      targetPort: 8080
  selector:
      app: spark
      role: master
  clusterIP: None
