k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
    - host: spark-kubernetes
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
